[package]
name = "veml7700"
version = "0.1.7"
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
authors = [
    "Diego Barrios Romero <eldruin@gmail.com>",
    "Boris Vinogradov <no111u3@gmail.com>",
]
description = "Platform-agnostic Rust driver for the VEML7700 High Accuracy Ambient Light Sensor"
documentation = "https://docs.rs/veml7700"
keywords = ["als", "ambient", "light", "sensor", "embedded-hal-driver"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/no111u3/veml7700"
exclude = ["memory.x", ".cargo", "Embed.toml"]

[features]
default = ["lux_as_f32"]
lux_as_f32 = ["micromath"]
lux_as_u32 = []

[dependencies]
embedded-hal = "0.2"
micromath = { version = "2.0", optional = true }

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f401"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }

[profile.release]
# Many of these settings are highly recommended or required for embedded work
codegen-units = 1
incremental = false
debug = true
lto = true
